syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.training.marketplace.member.controller.modal.request";

message RegisterRequest{
  string username = 1;
  string password = 2;
}